@@ -7,9 +7,16 @@ update-manager (1:0.95.1) jaunty; urgency=low
   * DistUpgrade/DistUpgradeCache.py:
     - when the dist-upgrade calculation fails, show the reason
       why in the error dialog (LP: #281286)
+    - when a meta package can not be upgraded, show a proper
+      error message with the package in question
   * DistUpgrade/DistUpgradeQuirks.py:
     - abort ugprade from hardy if evms is used in /proc/mounts
       evms got removed from the archive in intrepid (LP: #292179)
+  * DistUpgrade/removal_blacklist.cfg:
+    - remove overly broad postgresql regexp
+  * DistUpgrade/DistUpgradeCache.py:
+    - do not limit the removal blacklist to downloadable packages,
+      this limits it too much
 
  --
 
